Updating Spring and other dependencies. Still some failing unit tests, but working on it